Fixed animation height on ios

--- a/style.css
+++ b/style.css
@@ -311,8 +311,8 @@ body {
   100% {
     top: calc(50% - 50%);
     left: calc(50% - 50%);
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     border-radius: 0%;
     opacity: 1;
   }
